# scGPT

./: .gitignore  Tutorial_Perturbation copy.ipynb  clean_perturb_old.py  gears.ipynb  gene_index_map.json  integration.py  pyproject.toml  scgpt_perturb.ipynb  scgpt_perturb.py  scgpt_perturb_map.py  scgpt_perturb_old.py  slurm.sh  temp.py  test.py  tmp.py
scgpt/gears_utils/: __init__.py  pertdata.py
scgpt/model/: generation_model.py  multiomic_model.py
scgpt/utils/: util.py
